<resources>
    <string name="app_name">Ship Control</string>
    <string name="connecting">Connecting to server</string>
    <string name="curDataHeaderValue">Current ship readings</string>
    <string name="speedCaptionValue">speed:</string>
    <string name="steeringCaptionValue">steering:</string>
    <string name="controlsCaptionValue">Controls</string>
    <string name="speedUpButtonDescr">speed up</string>
    <string name="speedDownButtonDescr">speed down</string>
    <string name="curShipCaptionValue">Current ship:</string>
    <string name="turnLeftButtonDescr">turn left</string>
    <string name="turnRightButtonDescr">turn_right</string>
    <string name="connectionFailed">Failed to connect</string>
    <string name="Connecting">Connecting...</string>
    <string name="selectShip">Select ship</string>
    <string name="brokerURIKey">MQTT broker URI</string>
    <string name="queryTimeoutKey">Ship query timeout (ms)</string>
    <string name="settingsTitle">Settings</string>
    <string name="restartDialogMessage">Application restart is required for the setting to take effect</string>
    <string name="restartDialogRestartNow">Restart now</string>
    <string name="restartDialogLater">Later</string>
    <string name="brokerUsername">MQTT broker username</string>
    <string name="brokerPassword">MQTT broker password</string>
    <string name="mqttSettings">MQTT settings</string>
    <string name="controllerSettings">Controller settings</string>
    <string name="useTwoJoysticks">Use two joysticks</string>
    <string name="videoMode">Video</string>
    <string name="videoSettings">Video settings</string>
    <string name="videoStreamUri">Video stream URI</string>
    <string name="gpsSpeed">GPS speed:</string>
    <string name="kmh">km/h</string>
    <string name="satellites">satellites:</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">longitude:</string>
    <string name="bearingAngle">angle:</string>
    <string name="knots">kt</string>
    <string name="degrees">°</string>
    <string name="map">map</string>
    <string name="mapTitle">Map</string>
    <string name="startCalibration">calibrate</string>
    <string name="stopCalibration">stop calibr.</string>
    <string name="maxJoystickSpeed">Maximum joystick speed (1 - 10)</string>
    <string name="maxJoystickSpeedError">Max joystick speed must be between 1 and 10</string>
</resources>
