<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/mqttSettings">
    <EditTextPreference
        android:id="@+id/brokerURI"
        android:key="brokerURI"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="ssl://moosethebrown.ru:18883"
        android:title="@string/brokerURIKey" />
    <EditTextPreference
        android:id="@+id/brokerUsername"
        android:key="brokerUsername"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="username"
        android:title="@string/brokerUsername" />
    <EditTextPreference
        android:id="@+id/brokerPassword"
        android:key="brokerPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="password"
        android:title="@string/brokerPassword" />
    <EditTextPreference
        android:id="@+id/queryTimeout"
        android:defaultValue="1000"
        android:key="queryTimeout"
        android:inputType="number"
        android:digits="0123456789"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/queryTimeoutKey" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/controllerSettings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="controllerTwoJoysticks"
            android:title="@string/useTwoJoysticks" />
        <EditTextPreference
            android:id="@+id/maxJoystickSpeed"
            android:defaultValue="10"
            android:key="maxJoystickSpeed"
            android:inputType="number"
            android:digits="0123456789"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/maxJoystickSpeed"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/videoSettings">
        <EditTextPreference
            android:id="@+id/videoStreamUri"
            android:defaultValue="http://moosethebrown.ru/10080"
            android:key="videoStreamUri"
            android:singleLine="true"
            android:title="@string/videoStreamUri" />
    </PreferenceCategory>
</PreferenceScreen>