<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/controlLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:keepScreenOn="true"
        tools:context=".ControlFragment">

        <View
            android:id="@+id/dividerCurrent"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/colorForeground"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/curDataHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curDataHeaderValue"
            android:textColor="?android:attr/colorForeground"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerCurrent" />

        <TextView
            android:id="@+id/speedCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/speedCaptionValue"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/curDataHeader" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/speedCaption"
            app:layout_constraintTop_toTopOf="@+id/speedCaption" />

        <TextView
            android:id="@+id/steeringCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/steeringCaptionValue"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speedCaption" />

        <TextView
            android:id="@+id/steering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="?android:attr/colorForeground"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/steeringCaption"
            app:layout_constraintTop_toTopOf="@+id/steeringCaption" />

        <View
            android:id="@+id/dividerControls"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/colorForeground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steeringCaption" />

        <TextView
            android:id="@+id/controlsCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/controlsCaptionValue"
            android:textColor="?android:attr/colorForeground"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerControls" />

        <ImageButton
            android:id="@+id/speedUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/speedUpButtonDescr"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/plus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/controlsCaption" />

        <ImageButton
            android:id="@+id/speedDownButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/speedDownButtonDescr"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/minus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speedUpButton" />

        <ImageButton
            android:id="@+id/turnLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/turnLeftButtonDescr"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/controlsCaption" />

        <ImageButton
            android:id="@+id/turnRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/turnRightButtonDescr"
            android:hapticFeedbackEnabled="true"
            android:src="@drawable/right"
            app:layout_constraintLeft_toRightOf="@+id/turnLeftButton"
            app:layout_constraintTop_toBottomOf="@+id/controlsCaption" />

        <SeekBar
            android:id="@+id/steeringBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:max="10"
            android:min="-10"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/turnLeftButton"
            app:layout_constraintTop_toBottomOf="@+id/speedDownButton" />

        <SeekBar
            android:id="@+id/speedBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:rotation="270"
            android:max="10"
            android:min="-10"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/turnLeftButton"
            app:layout_constraintTop_toBottomOf="@+id/steeringBar" />

        <Button
            android:id="@+id/videoModeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:text="@string/videoMode"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
